Bug 245964 - Type of investment combo overwrites the first item when editing an investment
Summary: Type of investment combo overwrites the first item when editing an investment
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-28 01:22 UTC by Alvaro Soliverez
Modified: 2010-07-28 02:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bond account screenshot (28.17 KB, image/png)
2010-07-28 01:23 UTC, Alvaro Soliverez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-07-28 01:22:24 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

When editing a stock account, the first item of the type combo gets overwritten with the actual type of the account.

Reproducible: Always


Actual Results:  
The file named StockMFBond.png is what I see when I edit an existing stock in an investment account.

The file named BondMFBond.png is shat I see when I edit an existing bond in an investment account.

This does not happen in KMM2 (I suggest sorting the list alphabetically).
Comment 1 Alvaro Soliverez 2010-07-28 01:23:14 UTC
Created attachment 49556 [details]
bond account screenshot
Comment 2 Alvaro Soliverez 2010-07-28 02:11:40 UTC
SVN commit 1155738 by asoliverez:

Fixed the type of investment combo to not overwrite the first item with the current type.

Moved strings around, but there are no new or modified strings.

BUG:245964
CCMAIL:kde-i18n-doc@kde.org

 M  +15 -2     kinvestmenttypewizardpage.cpp  
 M  +0 -15     kinvestmenttypewizardpagedecl.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1155738