Fixed the type of investment combo to not overwrite the first item with the current type.

Moved strings around, but there are no new or modified strings.

BUG:245964
CCMAIL:kde-i18n-doc@kde.org

svn path=/trunk/extragear/office/kmymoney/; revision=1155738