kmymoney/wizards/newinvestmentwizard/kinvestmenttypewizardpage.cpp
@@ -19,7 +19,7 @@
 
 // ----------------------------------------------------------------------------
 // QT Includes
-
+#include <QStringListModel>
 
 // ----------------------------------------------------------------------------
 // KDE Includes
@@ -31,11 +31,24 @@
 KInvestmentTypeWizardPage::KInvestmentTypeWizardPage(QWidget *parent)
     : KInvestmentTypeWizardPageDecl(parent)
 {
+  QStringListModel *model = new QStringListModel();
+  QStringList types;
+  types << i18n("Stock") << i18n("Mutual Fund") << i18n("Bond");
+  model->setStringList(types);
+  model->sort(0, Qt::AscendingOrder);
+
+  m_securityType->setModel(model);
 }
 
 void KInvestmentTypeWizardPage::init2(const MyMoneySecurity& security)
 {
-  m_securityType->setItemText(m_securityType->currentIndex(), KMyMoneyUtils::securityTypeToString(security.securityType()));
+  //get the current text of the security and set the combo index accordingly
+  QString text = KMyMoneyUtils::securityTypeToString(security.securityType());
+  for(int i = 0; i < m_securityType->count(); ++i) {
+    if(m_securityType->itemText(i) == text)
+      m_securityType->setCurrentIndex(i);
+  }
+
   // Register the fields with the QWizard
   registerField("securityType", m_securityType, "currentText", SIGNAL(currentIndexChanged(const QString&)));
 }
